salesforce/force-app/main/default/objects/RY_Student_Progress__c/RY_Student_Progress__c.object-meta.xml
<CustomObject><deploymentStatus>Deployed</deploymentStatus><description>Proposed Red and Yellow demonstration model; not verified against an existing org.</description><enableReports>true</enableReports><label>RY Student Progress</label><nameField><displayFormat>RY-{000000}</displayFormat><label>Student Progress Number</label><type>AutoNumber</type></nameField><pluralLabel>RY Student Progress Records</pluralLabel><sharingModel>ReadWrite</sharingModel></CustomObject>