salesforce/force-app/main/default/objects/RY_Student_Progress__c/fields/Assessment_Average_Pct__c.field-meta.xml
<CustomField><fullName>Assessment_Average_Pct__c</fullName><label>Assessment Average Pct</label><precision>18</precision><required>false</required><scale>2</scale><type>Number</type></CustomField>