salesforce/force-app/main/default/objects/RY_Student_Progress__c/fields/Attendance_Pct__c.field-meta.xml
<CustomField><fullName>Attendance_Pct__c</fullName><label>Attendance Pct</label><precision>18</precision><required>false</required><scale>2</scale><type>Number</type></CustomField>