salesforce/force-app/main/default/objects/RY_Student_Progress__c/fields/Enrolment__c.field-meta.xml
<CustomField><fullName>Enrolment__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Enrolment</label><referenceTo>RY_Enrolment__c</referenceTo><relationshipLabel>Enrolment Records</relationshipLabel><relationshipName>RY_Student_Progress_Enrolment</relationshipName><required>false</required><type>Lookup</type></CustomField>