salesforce/force-app/main/default/objects/RY_Student_Progress__c/fields/Overdue_Assignments__c.field-meta.xml
<CustomField><fullName>Overdue_Assignments__c</fullName><label>Overdue Assignments</label><precision>18</precision><required>false</required><scale>0</scale><type>Number</type></CustomField>