salesforce/force-app/main/default/objects/RY_Student_Progress__c/fields/Risk_Band__c.field-meta.xml
<CustomField><fullName>Risk_Band__c</fullName><label>Risk Band</label><length>255</length><required>false</required><type>Text</type></CustomField>