salesforce/force-app/main/default/objects/RY_Student_Progress__c/fields/Week_Start__c.field-meta.xml
<CustomField><fullName>Week_Start__c</fullName><label>Week Start</label><required>false</required><type>Date</type></CustomField>